--- a/css/global.styles.css
+++ b/css/global.styles.css
@@ -465,14 +465,13 @@ ul.tags {
     background-image: url('http://urbanops.github.com/img/background.png'), -ms-radial-gradient(center, ellipse cover, #333 0%,#000 100%);
   background-image: url('http://urbanops.github.com/img/background.png'), radial-gradient(ellipse at center, #333 0%,#000 100%);
   background-repeat: no-repeat;
-  background-position: center 0%;
   width: 100%;
   padding: 1em 0 4em;
   margin: 0;
   zoom: 1;
-    -moz-box-shadow: inset 3px 3px 3px 0 #000;
-    -webkit-box-shadow: inset 3px 3px 3px 0 #000;
-  box-shadow: inset 3px 3px 5px 0 #000;
+    -moz-box-shadow: inset 3px 3px 0 #000;
+    -webkit-box-shadow: inset 3px 3px 0 #000;
+  box-shadow: inset 3px 3px 0 #000;
 }
 
 #main-header {
@@ -532,6 +531,10 @@ article {
   margin: 0;
   padding: 0;
   border-bottom: 1px solid #e5e5e5;
+}
+
+article:last-child {
+  border-bottom-width: 0px;
 }
 
 article.archive {
@@ -799,6 +802,9 @@ a[href*="/admin"]{
 
   #top-header {
     padding-bottom: 2em;
+    background-size: 100% auto;
+    height:70px;
+    background-position: center -50px;
   }
 
   ul.tags {
@@ -867,7 +873,9 @@ a[href*="/admin"]{
     padding: 1em 0 4em;
     margin: 0;
     zoom: 1;
+    height:100px;
     background-position: center center;
+    background-size: 100% auto;
   }
   .author {
     margin: 1em auto
@@ -902,7 +910,9 @@ a[href*="/admin"]{
   }
 
   #top-header {
-    height: 20em;
+    height: 200px;
+    background-position: center 40%;
+    background-size: auto auto;
   }
 
   .author {
@@ -920,7 +930,7 @@ a[href*="/admin"]{
 
 	#main-nav {
     width: 940px;
-		margin: 1em 2%;
+		margin: 1em auto
 	}
 
 	#main-nav ul {
