--- a/css/dev.styles.css
+++ b/css/dev.styles.css
@@ -174,6 +174,7 @@ form {
 
 form * {
   display:inline;
+  max-width: 100%;
 }
 
 fieldset {
@@ -770,7 +771,8 @@ a[href*="/admin"]{
 	body {
 		width: 100%;
 	}
-	.content {
+	header .content,
+  footer .content {
 	  width: 80%;
 	}
 
